--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="false"/>
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -21,18 +22,19 @@
         tools:targetApi="31">
         <activity
             android:name=".FeedbackActivity"
-            android:screenOrientation="portrait"
+            android:exported="false"
             android:label="Feedback"
-            android:exported="false">
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".UserProfileActivity"
-            android:screenOrientation="portrait"
+            android:exported="true"
             android:label="Profile"
-            android:exported="false">
+            android:screenOrientation="portrait">
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -61,8 +63,8 @@
         <activity
             android:name=".InventoryAdditionActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity"
             android:label="Inventory"
+            android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait">
 
             <meta-data
@@ -198,7 +200,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
 
             <meta-data
                 android:name="android.app.lib_name"
